--- a/frontend/app/src/app/groups/groups.component.css
+++ b/frontend/app/src/app/groups/groups.component.css
@@ -24,8 +24,12 @@
 }
 
 .member-btn {
+    width: 30px;  
+    height: 30px; 
     border: none;
     background-color: transparent;
+    background-image: url('../../../public/member.ico'); 
+    background-size: cover; 
     cursor: pointer;
 }
 
