Frontend prototype completely functional, just need to add some backend stuff to make it legitimate.

--- a/frontend/app/src/app/channels/channels.component.html
+++ b/frontend/app/src/app/channels/channels.component.html
@@ -2,7 +2,7 @@
     <h1>Channels</h1>
     <div class="channel-list">
         <div class="channel-item" *ngFor="let channel of channels">
-            <span>{{ channel }}</span>
+            <button (click)="onChannelClick(channel)">{{ channel }}</button>
         </div>
     </div>
     <button class="create-new-channel-btn" (click)="onClickCreateNewChannel()">Create New Channel</button>
