--- a/frontend/app/src/app/chat/chat.component.html
+++ b/frontend/app/src/app/chat/chat.component.html
@@ -1,1 +1,10 @@
-<p>chat works!</p>
+<div class="chat-container">
+    <h1>{{ channel }}</h1>
+    <div class="chat-window">
+        <!-- Chat messages will be displayed here -->
+    </div>
+    <div class="message-input">
+        <input type="text" placeholder="Type a message..." />
+        <button>Send</button>
+    </div>
+</div>
