--- a/frontend/app/src/app/create-new-group/create-new-group.component.html
+++ b/frontend/app/src/app/create-new-group/create-new-group.component.html
@@ -1,1 +1,11 @@
-<p>create-new-group works!</p>
+<div class="container">
+    <form #groupForm="ngForm" (ngSubmit)="onSubmit(groupForm.value)">
+      <div class="form-group">
+        <label for="groupName">Group Name:</label>
+        <input type="text" id="groupName" class="form-control" name="groupName" [(ngModel)]="groupName" required placeholder="Enter group name">
+      </div>
+  
+      <button type="submit" class="btn btn-primary" [disabled]="!groupForm.form.valid">Create Group</button>
+    </form>
+  </div>
+  
