--- a/frontend/app/src/app/create-new-group/create-new-group.component.html
+++ b/frontend/app/src/app/create-new-group/create-new-group.component.html
@@ -1,6 +1,6 @@
 <div class="create-new-group-container">
   <h1>Create New Group</h1>
-  <form (ngSubmit)="onSubmit(groupName)" #groupForm="ngForm">
+  <form (ngSubmit)="onSubmit()" #groupForm="ngForm">
     <div class="form-group">
       <label for="groupName">Group Name:</label>
       <input type="text" id="groupName" name="groupName" [(ngModel)]="groupName" required>
