--- a/frontend/app/src/app/groups/groups.component.html
+++ b/frontend/app/src/app/groups/groups.component.html
@@ -24,6 +24,9 @@
     <img *ngIf="profilePictureUrl" [src]="'http://localhost:3000/' + user.profilePicture" alt="Profile Picture" class="profile-picture" />
   </div>  
 
+  <!-- Create New Group Button -->
+  <button *ngIf="canCreateGroup" class="create-group-btn" (click)="createNewGroup()">Create New Group</button>
+
   <!-- Ban List Button (Only visible to 'super' users) -->
   <button *ngIf="isSuperAdmin" class="ban-list-btn" (click)="viewBanList()">Ban List</button>
 
